# aiomql

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  bot_testet.py  check.json  check.py  example.py  pyproject.toml  requirements.txt  ruff.toml  sample_backtest.py  sample_backtester.py  sample_bot.py  scrap.py  setup.py  st_tester.py  test.py
.github/: FUNDING.yml
backtesting/: backtest_data_01_05_24_06_05_24.json  backtest_data_01_11_24.json  backtest_data_02_11_24.json  backtest_data_03_11_24.json  backtest_data_30_10_24.json
docs/: TOC.md  _utils.md  account.md  bot_builder.md  candle.md  executor.md  history.md  main.md  order.md  positions.md  ram.md  records.md  result.md  sessions.md  strategy.md  symbol.md  terminal.md  ticks.md  toc.md  trade_records.md  trader.md  tutorial.md
docs/contrib/candle_patterns/: fractals.md
docs/contrib/strategies/: chaos.md
docs/contrib/symbols/: forex_symbol.md
docs/contrib/trackers/: open_position.md  position_trackers.md  position_tracking_functions.md
docs/contrib/traders/: scalp_trader.md  simple_trader.md
docs/contrib/utils/: strategy_tracker.md  tracker.md
docs/core/: _core.md  base.md  config.md  constants.md  db.md  errors.md  exceptions.md  meta_backtester.md  meta_trader.md  models.md  state.md  store.md  task_queue.md
docs/core/backtesting/: backtest_account.md  backtest_controller.md  backtest_engine.md  get_data.md  trades_manager.md
docs/lib/: account.md  backtester.md  bot.md  bot_builder.md  candle.md  executor.md  history.md  order.md  positions.md  ram.md  records.md  result.md  result_db.md  sessions.md  strategy.md  symbol.md  terminal.md  ticks.md  trade_records.md  trader.md  utils.md
docs/utils/: price_utils.md  process_pool.md  utils.md
examples/: bot.py  candles.py  emaxover.py  order.py  positions_history.py  sample_backtester.py  sample_bot.py  symbol.py  sythetic.py  xover_bot.py
examples/backtesting/: backtest_data_01_01_24_06_05_24.json  backtest_data_01_05_24_06_05_24.json
examples/records/: FingerTrap.csv
examples/sample_app/: bot.py  emaxover.py
examples/sample_app/trackers/: __init__.py  track.py
examples/sample_app/traders/: __init__.py  test_trader.py
examples/sample_app_2/: bot.py
examples/trade_records/: Chaos.csv
src/: aiomql.rar
src/aiomql/: __init__.py  _utils.py  account.py  bot_builder.py  candle.py  executor.py  history.py  order.py  positions.py  process_pool.py  ram.py  records.py  result.py  sessions.py  strategy.py  symbol.py  terminal.py  ticks.py  trade_records.py  trader.py  utils.py
src/pandas_ta/: __init__.py  __main__.py  _typing.py  custom.py
src/pandass_ta/: __init__.py  __main__.py  _typing.py  maps.py
tests/: __init__.py  conftest.py  fixtures.py  pytest.ini  test.json  test_config.json  test_config.py  test_constants.py  test_meta_trader.py  test_order.py  test_symbol.py  test_terminal.py
tests/backtest/: conftest.py
tests/integration/: test_results_records.py
tests/live/: conftest.py  test.json
tests/unit/: test_history.py  test_sessions.py  test_symbol.py
tests/unittests/: test_account.py  test_candles.py  test_config.py  test_history.py  test_meta_trader.py  test_positions.py  test_ram.py  test_result.py  test_terminal.py  test_ticks.py
todo/: New Text Document.txt  error_handler.py
trade_records/: Chaos.csv
utils/: meta_tester.py
(+560 files in other folders)
