[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiomql"
version = "4.0.15b"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["MetaTrader5", "Asynchronous", "Algorithmic Trading", "Trading Bot", "Backtesting",
            "Technical Analysis", "Forex", "Stocks", "Cryptocurrency", "Futures", "Options", "Crypto", "Algo Trading"]

dependencies = [
    "MetaTrader5>=5.0.5200",
    "pandas>=2.0.0",
    "mplfinance>=0.12.10b0",
    "numba>=0.61.2",
    "tqdm>=4.67.1",
]

authors = [{name = "Ichinga Samuel", email = "ichingasamuel@gmail.com"}]

description = "Asynchronous MetaTrader5 library and Algorithmic Trading Framework"

[project.urls]
"Homepage" = "https://github.com/Ichinga-Samuel/aiomql"
"Bug Tracker" = "https://github.com/Ichinga-Samuel/aiomql/issues"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
]
