[project]
name = "aiomql"
version = "4.0.17"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["MetaTrader5", "Asynchronous", "Algorithmic Trading", "Trading Bot", "Backtesting",
            "Technical Analysis", "Forex", "Stocks", "Cryptocurrency", "Futures", "Options", "Crypto", "Algo Trading"]

dependencies = [
    "metatrader5>=5.0.5640",
    "mplfinance>=0.12.10b0",
    "pandas>=3.0.1",
]

authors = [{name = "Ichinga Samuel", email = "ichingasamuel@gmail.com"}]

description = "Asynchronous MetaTrader5 library and Algorithmic Trading Framework"

[project.urls]
"Homepage" = "https://github.com/Ichinga-Samuel/aiomql"
"Bug Tracker" = "https://github.com/Ichinga-Samuel/aiomql/issues"

[project.optional-dependencies]

optional = [
    "cython>=3.2.4",
    "numba>=0.64.0",
    "tqdm>=4.67.3",
]

talib = [
    "ta-lib>=0.6.8",
]

all = ["aiomql[talib, optional]"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
]
